--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry excluding="Jar/" kind="src" path="src"/>
 	<classpathentry kind="src" path="src/Jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="lib" path="C:/Users/Maria/Downloads/mysql-connector-java-5.1.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
